--- a/Part3 copy/app/src/main/AndroidManifest.xml
+++ b/Part3 copy/app/src/main/AndroidManifest.xml
@@ -9,19 +9,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".addnewstudy2"></activity>
-        <activity
-            android:name="com.ics.part3.StudyActivity"
-            android:label="@string/app_name">
+        <activity android:name=".ReadingActivity"></activity>
+        <activity android:name=".SiteActivity" />
+        <activity android:name=".StudyActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ReadingActivity" />
-        <activity android:name=".SiteActivity" />
     </application>
-
 
 </manifest>
