--- a/Part3/app/src/main/AndroidManifest.xml
+++ b/Part3/app/src/main/AndroidManifest.xml
@@ -9,9 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".addnewstudy2"></activity>
+        <activity android:name=".activities.addnewstudy2"></activity>
         <activity
-            android:name="com.ics.part3.StudyActivity"
+            android:name="com.ics.part3.activities.StudyActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -19,8 +19,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ReadingActivity" />
-        <activity android:name=".SiteActivity" />
+        <activity android:name=".activities.ReadingActivity" />
+        <activity android:name=".activities.SiteActivity" />
     </application>
 
 
